implemented more of the Services class methods